--- a/sign-up.html
+++ b/sign-up.html
@@ -41,7 +41,7 @@
                         <hr class="or-line" color="#dbdbdb" size="1">
                     </div>
                     <!-- Mobile Number or Email -->
-                        <form style="display:flex; flex-direction: column; align-items:baseline" name = "user_data" action="/" method="post">
+                        <form style="display:flex; flex-direction: column; align-items:baseline" name = "user_data" action="/sign_up" method="post">
                             <div class="idpw_1">
                                 <input name = "mnoe" type="text" class="idpw_2" placeholder="Mobile Number or Email"
                                 id="sign_up_mobile_email"
