--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="instagram-web.css" type="text/css">
         <script src="instagram-web.js"></script>
+        <script src="sign-up.js"></script>
     </head>
 
     <body>
