2022-11-17 sign-in check

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <img src="instagram-pic\instagram-logo.png" style="width:175px; height:51px">
                         </div>
                         <!-- id -->
-                        <form name = "sign_in_data" action="/" method="post">
+                        <form name = "sign_in_data" action="/sign_in" method="post">
                             <div class="idpw_1" style="margin-top:24px">
                                 <input name = "sign_in_id" type="text" class="idpw_2" placeholder="Phone number, username, or email"
                                 id="user_id"
