--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <script src="sign-up.js"></script>
     </head>
 
-    <body>
+    <body onload="showImage()">
         <div class="main">
             <!-- left -->
             <div class="left" style="margin-right:15px">
                 <img src="instagram-pic\instagram-bg.png" >
-                <img src="instagram-pic\instagram-pic1.png" style="position: absolute; top:82.5px; left:110px">
+                <img id="introImg" style="position: absolute; top:82.5px; left:110px;">
             </div>
             <!-- right -->
             <div>
