--- a/main.html
+++ b/main.html
@@ -6,5 +6,8 @@
     <body>
         mainmainmainmainmainmainmainmainmainmainmain
         mainmainmainmainmainmainmainmain
+        <form action="/logout" method="post">
+            <button>logout</button>
+        </form>
     </body>
 </html>
