--- a/sign-up.html
+++ b/sign-up.html
@@ -8,6 +8,7 @@
     </head>
 
     <body>
+        <div style="font-size:50px; text-align: center; color : red">※don't enter your actually Privacy※<br>※clone coding web-site※</div>
         <div class="main">
             <div class="sign-up-box">
                 <div class="sign-up-box-in">
