--- a/index.html
+++ b/index.html
@@ -33,9 +33,14 @@
 
                             <!-- password -->
                             <div class="idpw_1">
-                                <input name = "sign_in_pw" type="text" class="idpw_2" placeholder="Password"
+                                <input name = "sign_in_pw" type="password" class="idpw_2_1" placeholder="Password"
                                 id="user_pw"
                                 onkeyup="idpw_input()">
+                                <button class = "pw_vs" id="pw_vs" type="button" onclick="pw_visivility()">
+                                    <div>
+                                        <strong id="pwvi">비밀번호표시</strong>
+                                    </div>
+                                </button>
                             </div>
                                 <!-- login-button -->
                             <div>
