--- a/sign-up.html
+++ b/sign-up.html
@@ -8,7 +8,6 @@
     </head>
 
     <body>
-        <div style="font-size:50px; text-align: center; color : red">※don't enter your actually Privacy※<br>※clone coding web-site※</div>
         <div class="main">
             <div class="sign-up-box">
                 <div class="sign-up-box-in">
@@ -42,7 +41,7 @@
                         <hr class="or-line" color="#dbdbdb" size="1">
                     </div>
                     <!-- Mobile Number or Email -->
-                        <form style="display:flex; flex-direction: column; align-items:baseline" name = "user_data" action="/sign_up" method="post">
+                        <form style="display:flex; flex-direction: column; align-items:baseline" name = "user_data" action="/" method="post">
                             <div class="idpw_1">
                                 <input name = "mnoe" type="text" class="idpw_2" placeholder="Mobile Number or Email"
                                 id="sign_up_mobile_email"
